# vision-rag

./: .gitignore  DATASET_CONFIG_SUMMARY.md  Makefile  README.md  SERVICE_GUIDE.md  main.py  pyproject.toml  run_service.py  simple_visualization_example.py  verify.py
demonstrations/: README.md  demo_with_visualization.py  multi_dataset_demo.py  replot_eval_plots.py  simple_visualization_demo.py  simple_visualization_example.py  tsne_visualization_demo.py  verify_image_retrieval.py
docs/: DATASET_CONFIG_SUMMARY.md  IMPORTS.md  MCP_SERVER.md  PRELOAD_GUIDE.md  SERVICE_GUIDE.md  TSNE_VISUALIZATION.md  WINDOWS_WSL_TROUBLESHOOTING.md
examples/: api_preload_demo.py  api_preload_example.py  client_demo.py  client_example.py  huggingface_example.py  main.py  mcp_client_example.py  preload_demo.py  preload_example.py  tsne_visualization_demo.py
scripts/: debug_paths.py  main.py  run_service.py  test_mcp_windows.py  verify.py
src/vision_rag/: __init__.py  data_loader.py  encoder.py  search.py  visualization.py
tests/: conftest.py  test_basic.py  test_build_encoder.py  test_config.py  test_data_loader.py  test_demo_classification_output.py  test_encoder.py  test_encoder_dino.py  test_examples_huggingface.py  test_hf_dino.py  test_image_store.py  test_integration.py  test_mcp_server.py  test_mcp_stdio.py  test_preload_quick.py  test_protocol_runtime.py  test_rag_store.py  test_search.py  test_service.py  test_visualization.py
vision_rag/: __init__.py  config.py  data_loader.py  encoder.py  image_store.py  mcp_server.py  rag_store.py  search.py  service.py  utils.py  visualization.py
