[project]
name = "vision-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "matplotlib>=3.9.0",
    "medmnist>=3.0.2",
    "numpy>=2.3.4",
    "pandas>=2.2.0",
    "pillow>=12.0.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "sentence-transformers>=5.1.2",
    "umap-learn>=0.5.3",
]

[tool.setuptools.packages.find]
include = ["vision_rag*"]

[tool.pytest.ini_options]
pythonpath = ["."]
